# httpie_ovh_auth

./: .bumpversion.cfg  .coverage  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  auth.env.tpl  bootstrap.py  coverage.xml  deploy.sh  httpie_ovh_auth.py  httpieovhauth.gpg  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/actions/publish/: action.yml
.github/scripts/: is_release.py  version.py
.github/workflows/: build.yaml  build.yml  github-actions.yml  publish.yml  workflow-build.yml  workflow-publish.yml  workflow-version.yml
tests/: test_signature.py  test_suite.py
