[build-system]
requires = [
  "setuptools @ git+https://github.com/pypa/setuptools@feature/pep660"
]
build-backend = "setuptools.build_meta"

[project]
name = "httpie-ovh-auth"
description = "OVH auth plugin for HTTPie."
dynamic = ["readme", "version"]
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Environment :: Plugins",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]
dependencies = [
  "httpie>=1.0.0"
]

[[project.authors]]
name = "Laurent Almeras"
email = "lalmeras@gmail.com"

[project.urls]
repository = "https://github.com/lalmeras/httpie_ovh_auth/"
homepage = "https://pypi.org/project/httpie-ovh-auth/"
changelog = "https://github.com/lalmeras/httpie_ovh_auth/blob/dev/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "tox",
  "mock>=2.0.0",
  "pexpect>=4.2.1",
  "pytest>=3.0.6",
  "pytest-cov>=2.4.0",
  "mypy",
  "pylint",
  "rope",
  "black==20.8b1"
]
dev = [
  "twine",
  "tbump",
  "ipdb",
  "build",
  "pypiserver"
]

[project.entry-points."httpie.plugins.auth.v1"]
httpie_ovh_auth = "httpie_ovh_auth:OvhAuthPlugin"

[tools.setuptools]
zip-safe = true
py-modules = ["httpie_ovh_auth"]

[tool.setuptools.dynamic]
version = {attr = "httpie_ovh_auth.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-config .coveragerc --cov httpie_ovh_auth"
testpaths = [
    "tests"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,38,39,310},pipenv,mypy,pylint
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310, pylint, mypy

[testenv]
setenv =
    LC_ALL = en_US.utf-8
    LANG = en_US.utf-8

# use pipenv venv
[pipenv]
commands =
    pipenv run pytest --cov=httpie_ovh_auth --cov-report=xml {posargs}

[py]
deps =
    pytest
    pytest-cov
commands =
    pytest --cov=httpie_ovh_auth --cov-report=xml --cov-fail-under 100 {posargs}

[testenv:pipenv]
deps =
    pipenv
setenv =
    PIPENV_IGNORE_VIRTUALENVS = 0
commands = {[pipenv]commands}

[testenv:py{37,38,39,310}]
deps = {[py]deps}
commands = {[py]commands}

[testenv:mypy]
deps =
    mypy
commands =
    mypy --config-file pyproject.toml

[testenv:pylint]
deps =
    pylint
commands =
    pylint httpie_ovh_auth
"""

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
files = "httpie_ovh_auth.py"

[[tool.mypy.overrides]]
module = [
  "httpie.plugins",
  "httpie.models"
]
ignore_missing_imports = true

[tool.tbump.version]
current = "1.2.0.dev0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\.
  (?P<extra>dev\d+)
  )?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "httpie_ovh_auth.py"

